Creating custom login page

--- a/Freshvotes/src/main/resources/application.properties
+++ b/Freshvotes/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:3306/freshvotes
+spring.datasource.url=jdbc:postgresql://localhost:3306/freshvotes?useSSL=false
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
